--- a/views/patient/register-patient.styles.css
+++ b/views/patient/register-patient.styles.css
@@ -10,14 +10,24 @@
     --test-clr: #a9cce3;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.5rem;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--base-clr);
     color: var(--text-clr);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: auto 1fr;
     min-height: 100vh;
+    min-height: 100dvh;
     margin: 0;
 }
 
@@ -32,11 +42,13 @@ body {
 
 .form-container {
     background: var(--hover-clr);
-    padding: 2rem;
+    padding: min(3em, 15%);
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     max-width: 80%;
     width: 100%;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 
 
@@ -256,84 +268,4 @@ button {
 
 #curp {
     text-transform: uppercase;
-}
-
-#sidebar {
-    box-sizing: border-box;
-    height: 100vh;
-    width: 250px;
-    padding: 5px 1em;
-    background-color: var(--hover-clr);
-    border-right: 1px solid var(--line-clr);
-    position: sticky;
-    top: 0;
-    align-self: start;
-    transition: 300ms ease-in-out;
-    overflow: hidden;
-    text-wrap: nowrap;
-}
-
-#sidebar.close {
-    padding: 5px;
-    width: 60px;
-}
-
-#sidebar ul {
-    list-style: none;
-}
-
-#sidebar>ul>li:first-child {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 16px;
-    .logo {
-        font-weight: 600;
-    }
-}
-
-#sidebar ul li.active a {
-    color: var(--accent-clr);
-    svg {
-        fill: var(--accent-clr);
-    }
-}
-
-#sidebar a,
-#sidebar .logo {
-    border-radius: .5em;
-    padding: .85em;
-    text-decoration: none;
-    color: var(--text-clr);
-    display: flex;
-    align-items: center;
-    gap: 1em;
-}
-
-#sidebar svg {
-    flex-shrink: 0;
-    fill: var(--text-clr);
-}
-
-#sidebar a span {
-    flex-grow: 1;
-}
-
-#sidebar a:hover {
-    background-color: var(--hover-clr);
-}
-
-#toggle-btn {
-    margin-left: auto;
-    padding: 1em;
-    border: none;
-    border-radius: .5em;
-    background: none;
-    cursor: pointer;
-    svg {
-        transition: rotate 150ms ease;
-    }
-}
-
-#toggle-btn:hover {
-    background-color: var(--hover-clr);
 }
