--- a/views/doctor/list/list-doctors.styles.css
+++ b/views/doctor/list/list-doctors.styles.css
@@ -10,24 +10,13 @@
     --test-clr: #a9cce3;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--base-clr);
-    color: var(--text-clr);
-    display: flex;
-    grid-template-columns: auto 1fr;
-    min-height: 100vh;
-    min-height: 100dvh;
-    margin: 0;
-}
-
 .table-container {
-    padding: 2rem;
+    padding: 3rem;
     background-color: var(--hover-clr);
-    border-radius: 12px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+    border-radius: 16px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.06);
     max-width: 95%;
-    margin: 2rem auto;
+    margin: 3rem auto;
     overflow-x: auto;
 }
 
@@ -43,9 +32,10 @@ thead {
 }
 
 thead th {
-    padding: 0.75rem;
+    padding: 1rem;
     text-align: left;
     font-weight: 600;
+    font-size: 1rem;
 }
 
 tbody tr {
@@ -58,15 +48,36 @@ tbody tr:hover {
 }
 
 tbody td {
-    padding: 0.75rem;
+    padding: 1rem;
     color: var(--text-clr);
-    font-size: 0.95rem;
+    font-size: 1rem;
 }
 
 .table-title {
     text-align: center;
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-weight: 700;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     color: var(--accent-clr);
+}
+
+main {
+    gap: 20px;
+}
+
+h1 {
+    color: black;
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+
+/* Contenedor Principal */
+
+.content {
+    flex-grow: 1;
+    padding: 20px;
+    margin-top: 20px;
 }
