--- a/views/patient/register/register-patient.styles.css
+++ b/views/patient/register/register-patient.styles.css
@@ -24,20 +24,6 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--base-clr);
     color: var(--text-clr);
-    display: flex;
-    grid-template-columns: auto 1fr;
-    min-height: 100vh;
-    min-height: 100dvh;
-    margin: 0;
-}
-
-.center-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 22px;
 }
 
 .form-container {
@@ -45,10 +31,13 @@ body {
     padding: min(3em, 15%);
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    max-width: 80%;
+    flex: 1;
     width: 100%;
-    margin-bottom: 20px;
-    margin-left: 20px;
+    margin-bottom: 50px;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-right: 30px;
+    margin
 }
 
 
@@ -268,4 +257,11 @@ button {
 
 #curp {
     text-transform: uppercase;
+}
+
+.registerPatientWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
